# vim-myst

./: .gitignore  README.md  pyproject.toml
.todo/: todo.txt  todo.txt.bak
after/indent/: myst.vim
after/syntax/: myst.vim
doc/: _config.yml  _toc.yml  myst.md
doc/snippets/: include-md.md  include-rst.rst  outside.md
ftdetect/: myst.vim
ftplugin/: myst.vim
indent/: myst.vim
snippets/: myst.snippets
